--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
     android:background="#EFF8FB" >
 
     <com.bhavya.myapplication.CustomSeekBar
         android:id="@+id/seekBar0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:clipToPadding="false"
         android:max="100"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
         android:progress="0"
         android:progressDrawable="@android:color/transparent"
+        android:thumbTint="#00FFFFFF"
         android:thumbOffset="12dp" />
+
 
 </RelativeLayout>
